ALERT-60: Added the route section and instrumented/unit tests. Renamed some dialog fragment layouts, deleted example tests, and updated git ignore to exclude json dumps from the MBTA api. Updated the MBTA module Route toString method and converted the Stop routeId field to a set.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -66,10 +66,22 @@
         <item name="colorAccent">@color/blue_line</item>
     </style>
 
+    <style name="AlarmSettingsDark.Boat">
+        <item name="colorPrimary">@color/ferry</item>
+        <item name="tabSelectedIndicatorColor">@color/ferry</item>
+        <item name="colorAccent">@color/ferry</item>
+    </style>
+
     <style name="AlarmSettingsLight.Bus">
         <item name="colorPrimary">@color/bus</item>
         <item name="tabSelectedIndicatorColor">@color/bus</item>
         <item name="colorAccent">@color/bus</item>
+    </style>
+
+    <style name="AlarmSettingsDark.Commuter">
+        <item name="colorPrimary">@color/commuter</item>
+        <item name="tabSelectedIndicatorColor">@color/commuter</item>
+        <item name="colorAccent">@color/commuter</item>
     </style>
 
     <style name="AlarmSettingsDark.Default">
