ALERT-39: Created an 'mbta' database and moved 'mbta' module classes into the 'app' module.

--- a/app/src/main/res/layout/fragment_alarm_dialog_route.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog_route.xml
@@ -21,7 +21,7 @@
             android:completionThreshold="1"
             android:imeOptions="actionDone"
             android:hint="@string/route_dialog_default"
-            android:text="@{alarm.route.routeName}"
+            android:text="@{alarm.route.toString()}"
             app:adapter="@{autocomplete.adapter}"
             app:validator="@{autocomplete.validator}"
             app:onItemClick="@{autocomplete.itemClickListener}"
