--- a/app/src/main/res/layout/fragment_alarm_settings_section_stop.xml
+++ b/app/src/main/res/layout/fragment_alarm_settings_section_stop.xml
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="@string/stop_default"
-                android:text="@{alarm.stop.stopName}"
+                android:text="@{alarm.stop.toString()}"
                 android:textSize="20sp"
                 android:textColor="@color/gray"
                 android:layout_below="@id/alarmSettings_section_label_stop"
