ALERT-62: Created the 'endpoints' section. Refactored db async tasks to use callbacks on post execute. Updated 'EditAlarm' instrumentation tests to be more robust.

--- a/app/src/main/res/layout/fragment_alarm_settings_tab_mbta.xml
+++ b/app/src/main/res/layout/fragment_alarm_settings_tab_mbta.xml
@@ -27,6 +27,11 @@
             android:visibility="@{alarm.route == null ? View.GONE : View.VISIBLE}"
             bind:alarm="@{alarm}"/>
 
+        <include layout="@layout/fragment_alarm_settings_section_endpoints"
+            android:id="@+id/alarmSettings_endpoints"
+            android:visibility="@{alarm.direction == null ? View.GONE : View.VISIBLE}"
+            bind:alarm="@{alarm}"/>
+
     </LinearLayout>
 
 </layout>
