--- a/app/src/main/res/layout/fragment_alarm_dialog_route.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog_route.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data class="AlarmRouteBinding">
-        <variable name="alarm" type="com.jesseoberstein.alert.models.UserAlarm"/>
+        <variable name="alarm" type="com.jesseoberstein.alert.models.UserAlarmWithRelations"/>
+        <variable name="route" type="com.jesseoberstein.alert.models.mbta.Route"/>
         <variable name="autocomplete" type="com.jesseoberstein.alert.models.AutoComplete"/>
     </data>
 
