--- a/app/src/main/res/layout/fragment_alarm_settings_section_direction.xml
+++ b/app/src/main/res/layout/fragment_alarm_settings_section_direction.xml
@@ -2,7 +2,8 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data class="DirectionSectionBinding">
-        <variable name="alarm" type="com.jesseoberstein.alert.models.UserAlarm"/>
+        <variable name="alarm" type="com.jesseoberstein.alert.models.UserAlarmWithRelations"/>
+        <variable name="direction" type="com.jesseoberstein.alert.models.mbta.Direction"/>
     </data>
 
     <LinearLayout
