ALERT-65: Added support for removing alarms.

--- a/app/src/main/res/layout/list_alarms.xml
+++ b/app/src/main/res/layout/list_alarms.xml
@@ -17,7 +17,8 @@
         android:background="@drawable/border_gray"
         android:descendantFocusability="blocksDescendants"
         android:paddingTop="@dimen/grid_item_padding_small"
-        android:layout_margin="@dimen/grid_item_padding_small">
+        android:layout_margin="@dimen/grid_item_padding_small"
+        android:longClickable="true">
 
         <RelativeLayout
             android:layout_width="wrap_content"
