--- a/app/src/main/res/layout/list_alarms.xml
+++ b/app/src/main/res/layout/list_alarms.xml
@@ -46,17 +46,15 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:paddingTop="@dimen/grid_item_padding_tiny"
-            android:paddingEnd="@dimen/grid_item_padding_medium">
+            android:paddingTop="@dimen/grid_item_padding_small"
+            android:paddingStart="@dimen/grid_item_padding"
+            android:paddingEnd="@dimen/grid_item_padding">
 
-            <TextView
+            <ImageView
                 android:id="@+id/alarm_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text='@{alarm.active ? @string/on : @string/off}'
-                android:textSize="@dimen/grid_item_secondary_action_size"
-                android:textStyle="bold"
-                android:textColor="@{activeStatusTextColor}" />
+                android:contentDescription="@string/alarm_status"
+                android:layout_width="@dimen/grid_item_secondary_action_size"
+                android:layout_height="@dimen/grid_item_secondary_action_size"/>
         </RelativeLayout>
 
         <RelativeLayout
