--- a/app/src/main/res/layout/list_alarms.xml
+++ b/app/src/main/res/layout/list_alarms.xml
@@ -33,7 +33,7 @@
                     android:textStyle="bold"
                     android:textSize="@dimen/grid_item_primary_font_size"/>
 
-                <android.support.v7.widget.RecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/alarm_days"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
