--- a/app/src/main/res/layout/fragment_alarm_dialog_route.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog_route.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data class="AlarmRouteBinding">
-        <variable name="alarm" type="com.jesseoberstein.alert.models.UserAlarmWithRelations"/>
-        <variable name="route" type="com.jesseoberstein.alert.models.mbta.Route"/>
+        <variable name="viewModel" type="com.jesseoberstein.alert.viewmodels.DraftAlarmViewModel" />
         <variable name="autocomplete" type="com.jesseoberstein.alert.models.AutoComplete"/>
     </data>
 
@@ -22,11 +21,12 @@
             android:completionThreshold="1"
             android:imeOptions="actionDone"
             android:hint="@string/route_dialog_default"
-            android:text="@{alarm.route.toString()}"
+            android:text="@{viewModel.route.toString()}"
             app:adapter="@{autocomplete.adapter}"
             app:validator="@{autocomplete.validator}"
-            app:onItemClick="@{autocomplete.itemClickListener}"
-            app:isCursorAtEnd="@{true}" />
+            app:onItemClick="@{autocomplete.itemClickListener}">
+            <requestFocus/>
+        </AutoCompleteTextView>
 
     </LinearLayout>
 
