--- a/app/src/main/res/layout/fragment_alarm_settings_section_direction.xml
+++ b/app/src/main/res/layout/fragment_alarm_settings_section_direction.xml
@@ -2,7 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data class="DirectionSectionBinding">
-        <variable name="alarm" type="com.jesseoberstein.alert.models.UserAlarmWithRelations"/>
         <variable name="direction" type="com.jesseoberstein.alert.models.mbta.Direction"/>
     </data>
 
@@ -34,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="@string/direction_default"
-                android:text="@{alarm.direction.toString()}"
+                android:text="@{direction.toString()}"
                 android:textSize="20sp"
                 android:textColor="@color/gray"
                 android:layout_below="@id/alarmSettings_section_label_direction"
