--- a/app/src/main/res/layout/fragment_alarm_settings_section_endpoints.xml
+++ b/app/src/main/res/layout/fragment_alarm_settings_section_endpoints.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <data class="EndpointSectionBinding">
-        <variable name="alarm" type="com.jesseoberstein.alert.models.UserAlarmWithRelations"/>
-        <variable name="endpoints" type="java.util.List&lt;com.jesseoberstein.alert.models.mbta.Endpoint&gt;"/>
-    </data>
+<!--    <data class="EndpointSectionBinding">-->
+<!--        <variable name="alarm" type="com.jesseoberstein.alert.models.UserAlarmWithRelations"/>-->
+<!--        <variable name="endpoints" type="java.util.List&lt;com.jesseoberstein.alert.models.mbta.Endpoint&gt;"/>-->
+<!--        <variable name="draftAlarmViewModel" type="com.jesseoberstein.alert.viewmodels.DraftAlarmViewModel" />-->
+<!--    </data>-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,34 +14,34 @@
         android:paddingTop="10dp"
         android:paddingBottom="5dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp">
+<!--        <RelativeLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:paddingStart="10dp"-->
+<!--            android:paddingEnd="10dp">-->
 
-            <TextView
-                android:id="@+id/alarmSettings_section_label_endpoints"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/endpoints"
-                android:textStyle="bold"
-                android:textSize="12sp"
-                android:textColor="?attr/sectionLabelColor"
-                android:layout_marginBottom="5dp"/>
+<!--            <TextView-->
+<!--                android:id="@+id/alarmSettings_section_label_endpoints"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/endpoints"-->
+<!--                android:textStyle="bold"-->
+<!--                android:textSize="12sp"-->
+<!--                android:textColor="?attr/sectionLabelColor"-->
+<!--                android:layout_marginBottom="5dp"/>-->
 
-            <TextView
-                android:id="@+id/alarmSettings_section_value_endpoints"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/endpoints_default"
-                android:text="@{alarm.endpoints}"
-                android:textSize="20sp"
-                android:textColor="@color/gray"
-                android:layout_below="@id/alarmSettings_section_label_endpoints"
-                android:layout_marginBottom="15dp"/>
+<!--            <TextView-->
+<!--                android:id="@+id/alarmSettings_section_value_endpoints"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:hint="@string/endpoints_default"-->
+<!--                android:text="@{alarm.endpoints}"-->
+<!--                android:textSize="20sp"-->
+<!--                android:textColor="@color/gray"-->
+<!--                android:layout_below="@id/alarmSettings_section_label_endpoints"-->
+<!--                android:layout_marginBottom="15dp"/>-->
 
-        </RelativeLayout>
+<!--        </RelativeLayout>-->
 
         <View
             android:layout_width="match_parent"
