--- a/app/src/main/res/layout/fragment_alarm_settings_section_name.xml
+++ b/app/src/main/res/layout/fragment_alarm_settings_section_name.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data class="NicknameSectionBinding">
-        <variable name="alarm" type="com.jesseoberstein.alert.models.UserAlarm"/>
+        <variable name="nickname" type="String" />
     </data>
 
     <LinearLayout
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="@string/nickname_default"
-                android:text="@{alarm.nickname}"
+                android:text="@{nickname}"
                 android:textSize="20sp"
                 android:textColor="@color/gray"
                 android:textColorHint="@color/gray"
