--- a/app/src/main/res/layout/fragment_alarm_dialog_stop.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog_stop.xml
@@ -24,8 +24,9 @@
             android:text="@{stop.toString()}"
             app:adapter="@{autocomplete.adapter}"
             app:validator="@{autocomplete.validator}"
-            app:onItemClick="@{autocomplete.itemClickListener}"/>
-            app:isCursorAtEnd="@{true}" />
+            app:onItemClick="@{autocomplete.itemClickListener}">
+            <requestFocus/>
+        </AutoCompleteTextView>
 
     </LinearLayout>
 
