--- a/app/src/main/res/layout/fragment_alarm_settings_section_duration.xml
+++ b/app/src/main/res/layout/fragment_alarm_settings_section_duration.xml
@@ -2,8 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data class="DurationSectionBinding">
-        <import type="com.jesseoberstein.alert.utils.DateTimeHelper"/>
-        <variable name="alarm" type="com.jesseoberstein.alert.models.UserAlarm"/>
+        <variable name="duration" type="java.time.Duration"/>
     </data>
 
     <LinearLayout
@@ -33,7 +32,7 @@
                 android:id="@+id/alarmSettings_section_value_duration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{DateTimeHelper.getFormattedDuration(alarm.duration)}"
+                android:text="@{duration.toMinutes() + ` minutes`}"
                 android:textSize="20sp"
                 android:textColor="@color/gray"
                 android:layout_below="@id/alarmSettings_section_label_duration"
