--- a/app/src/main/res/layout/fragment_alarm_settings_tab_time.xml
+++ b/app/src/main/res/layout/fragment_alarm_settings_tab_time.xml
@@ -19,7 +19,7 @@
 
             <include layout="@layout/fragment_alarm_settings_section_time"
                 android:id="@+id/alarmSettings_time"
-                bind:alarm="@{viewModel.draftAlarm}"/>
+                bind:time="@{viewModel.formattedTime}"/>
 
             <include layout="@layout/fragment_alarm_settings_section_name"
                 android:id="@+id/alarmSettings_name"
@@ -27,11 +27,11 @@
 
             <include layout="@layout/fragment_alarm_settings_section_repeat"
                 android:id="@+id/alarmSettings_repeat"
-                bind:alarm="@{viewModel.draftAlarm}"/>
+                bind:repeatType="@{viewModel.repeatType}"/>
 
             <include layout="@layout/fragment_alarm_settings_section_duration"
                 android:id="@+id/alarmSettings_duration"
-                bind:alarm="@{viewModel.draftAlarm}"/>
+                bind:duration="@{viewModel.duration}"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -49,7 +49,7 @@
                 android:paddingTop="5dp"
                 android:paddingBottom="10dp"
                 android:gravity="center_horizontal"
-                android:text="@{viewModel.draftAlarm.nextFiringDayString + ` at ` + viewModel.draftAlarm.time}"/>
+                android:text="@{viewModel.formattedNextFiringDay + ` at ` + viewModel.formattedTime}"/>
 
         </LinearLayout>
 
